--- a/styles/scss/_start-bar.scss
+++ b/styles/scss/_start-bar.scss
@@ -43,7 +43,7 @@
       &::after {
         content: '';
         position: absolute;
-        right: -1rem;
+        right: calc(-1rem + 1px);
         top: 0;
         bottom: 0;
         margin: auto;
@@ -195,7 +195,7 @@
           width: 1rem;
           height: 3rem;
           position: absolute;
-          left: 1px;
+          left: 0;
           top: 0;
           bottom: 0;
           margin: auto;
